<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="infoViewModel"
            type="com.rio.project12.view_model.RocketInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/id_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/id_info"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/rocketInfoBottomId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{infoViewModel.id}"
                            android:layout_margin="15dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/name_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/rocket_name"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/rocketInfoBottomName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{infoViewModel.name}"
                            android:layout_margin="15dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/date_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/date_utc"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/rocketInfoBottomDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{infoViewModel.date}"
                            android:layout_margin="15dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/success_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/rocket_successfully_launched"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/rocketInfoBottomSuccess"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{infoViewModel.isSuccess}"
                            android:layout_margin="15dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/details_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/details"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/rocketInfoBottomDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@{infoViewModel.details}"
                            android:layout_margin="15dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/infoBottomWikiCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/wiki_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/wikipedia"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>

                        <Button
                            android:id="@+id/rocketInfoBottomWiki"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:background="#00FFFFFF"
                            android:gravity="center"
                            android:text="@{infoViewModel.wiki}"
                            android:textColor="#1C35E6" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/infoBottomArticleCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardElevation="5dp"
                    android:layout_margin="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:src="@drawable/article_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:gravity="center"
                                android:text="@string/article"
                                android:textSize="24sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>

                        <Button
                            android:id="@+id/rocketInfoBottomArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:background="#00FFFFFF"
                            android:gravity="center"
                            android:text="@{infoViewModel.article}"
                            android:textColor="#1C35E6" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
</layout>