<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="deepInfo"
            type="com.rio.project12.view_model.WeatherDeepDetailsViewModel" />
    </data>

    <!--
            Top level Linear layout
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--
                    inner layout number = 1
                    inner linear layout for air quality and
                    time zone layouts
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/cardview_shadow_end_color"
                    android:backgroundTint="@color/black">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!--
                            inner layout number = 1.1
                            inner linear layout for air quality
                        -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/air_quality"
                                android:textStyle="bold|italic"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:layout_gravity="center"/>

                            <TextView
                                android:id="@+id/airQuality"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{deepInfo.airQuality}"
                                android:textColor="@color/black"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:src="@drawable/air" />

                            <TextView
                                android:id="@+id/airQualityReading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:text="@{deepInfo._airQualityReading}"
                                android:textSize="40sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>

                    <!--
                        inner layout number = 1.2
                        inner linear layout for time zone layouts
                    -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical"
                        android:layout_gravity="right">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|italic"
                            android:text="@string/time_zone"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/TimeZone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{deepInfo.timeZone.toString()}"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <!--
                    inner layout number = 2
                    inner linear layout for
                    description
                -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{deepInfo.description}"
                        android:paddingStart="10dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!--
                    inner layout number = 3
                    inner linear layout for air quality and
                    time zone layouts
                -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_flow"
                            android:textStyle="bold|italic"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/windData"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{deepInfo.windData}"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>